--- a/src/app/lista-compra/lista-compra.component.html
+++ b/src/app/lista-compra/lista-compra.component.html
@@ -1,18 +1,17 @@
-<br>
+<!--<br>
 <h1 class = "titleMisListas">
-  Estas son mis listas
 </h1>
-<br>
+<br>-->
 
 <div class= "chooseList" style = "font-weight: bold;">
-  Elige la lista:
-<button mat-fab color="accent" style = "font-size: 20px;" (click) = activar()>Go!</button>
+Lista Predeterminada:
+<button mat-fab color="accent" style = "font-size: 20px;" (click) = defList()>Go!</button>
 </div>
 <br>
 
 <div class = "addToList">
 <form (submit)="addElement(newElement)">Añadir a la lista: 
-  <input type="text" #newElement name="newElement" [(ngModel)] ="new">
+  <input type="text" #newElement name="newElement" [(ngModel)] ="new" (click) = activar()>
   <button (click) ="clearNew()">
     Send
   </button>
