--- a/src/app/lista-compra/lista-compra.component.scss
+++ b/src/app/lista-compra/lista-compra.component.scss
@@ -5,19 +5,24 @@
 
 .chooseList{
     padding-left: 15px;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .addToList{
     padding-left: 15px;
+    font-size: 25px;
 }
+
+.example-form-field {
+    width: 200px;
+  }
 
 ul{
     list-style-type: none;
     /*numero a partir del cual se añade una columna mas*/
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
 }
 
 li {
