--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <span>La Lista de la Compra de Almudena y Fernando</span>
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">favorite</mat-icon>
     <span class="example-spacer"></span>
+    <button mat-button (clic)= reloadPage()><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon></button>
     <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
