--- a/src/app/lista-compra/lista-compra.component.scss
+++ b/src/app/lista-compra/lista-compra.component.scss
@@ -3,35 +3,51 @@
     padding-left: 15px;
 }
 
-.chooseList{
-    padding-left: 15px;
-    font-size: 20px;
+#wrapper {
+    width:100%;
+    margin : 100;
 }
 
-.addToList{
-    padding-left: 15px;
+#addToList{
+    width:50%;
+    margin : 0;
+    float : left ;
+    /*padding-left: 15px;*/
     font-size: 25px;
+}
+
+#defList{
+    width:50%;
+    margin : 0;
+    float : left ;
+    font-size: 20px;
+    text-align: right;
+    /*padding-right: 15px;
+    text-align: right;*/
 }
 
 .example-form-field {
     width: 200px;
   }
 
+  /*numero a partir del cual se añade una columna mas*/
 ul{
     list-style-type: none;
-    /*numero a partir del cual se añade una columna mas*/
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
+    /*-moz-column-count: 4;
+    -webkit-column-count: 4;
+    column-count: 4;*/
 }
 
 li {
     padding-bottom: 2px;
-    /*float: left;*/
+    padding-right: 2px;
+
+    float: left;
 }
 
 .green {
-    background-color: green;
+    background-color: #2ECC40
+    ;
 }
 
 .red {
@@ -43,7 +59,15 @@ li {
 }
 
 .deleteButton{
-    size: 120px;
+   /* size: 100px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding-bottom: 100px;
+*/
+margin-bottom: 70px;
+
+text-align: right;
+align-content: flex-end;
 }
 
 /*:host { 
@@ -70,4 +94,8 @@ li {
     width: 200px;
     height: 100px;
     font-size: 20px;
+  }
+
+  mat-grid-tile {
+    background: primary;
   }
