--- a/src/app/lista-compra/lista-compra.component.scss
+++ b/src/app/lista-compra/lista-compra.component.scss
@@ -1,19 +1,37 @@
 .titleMisListas {
-    /*color: brown; font: bold;*/
     padding-left: 15px;
 }
 
 #wrapper {
-    width:100%;
+    width: 100%;
     margin : 100;
 }
 
 #addToList{
-    width:50%;
+    width: 50%;
     margin : 0;
     float : left ;
-    /*padding-left: 15px;*/
     font-size: 25px;
+}
+@media (max-width: 399px){
+#addToList{
+    width: 95%;
+}
+}
+@media (min-width: 400px) and (max-width: 599px){
+#addToList{
+    width: 90%;
+}
+}
+
+#defHeart{
+    font-size: 30px;
+}
+@media (max-width: 599px) and (min-width: 400px){
+#defHeart{
+    font-size: 50px;
+    margin-right: 15px;
+}
 }
 
 #defList{
@@ -22,17 +40,24 @@
     float : left ;
     font-size: 20px;
     text-align: right;
-    /*padding-right: 15px;
-    text-align: right;*/
+}
+
+#defListMob{
+    margin : 0;
+    float : right ;
+    font-size: 15px;
+    text-align: right;
+    align-content: right;
 }
 
 .example-form-field {
     width: 200px;
   }
 
-  /*numero a partir del cual se añade una columna mas*/
+/*numero a partir del cual se añade una columna mas*/
 ul{
     list-style-type: none;
+    margin-right: 10px;
     /*-moz-column-count: 4;
     -webkit-column-count: 4;
     column-count: 4;*/
@@ -41,7 +66,6 @@ ul{
 li {
     padding-bottom: 2px;
     padding-right: 2px;
-
     float: left;
 }
 
@@ -54,20 +78,28 @@ li {
     background-color: red;
 }
 
-.ingButton{
-    size: 820px;
+#elementButton{
+    size: 420px;
+}
+
+@media (max-width:768px){
+#elementButton{
+    font-size: 14px;
+    width: 120px;
+}
+li {
+    padding-bottom: 2px;
+    padding-right: 62px;
+    margin-left: -25px;
+    margin-right: -35px;
+    float: left;
+}
 }
 
 .deleteButton{
-   /* size: 100px;
-    margin-right: 10px;
-    margin-left: 10px;
-    padding-bottom: 100px;
-*/
-margin-bottom: 70px;
-
-text-align: right;
-align-content: flex-end;
+    margin-bottom: 70px;
+    text-align: right;
+    align-content: flex-end;
 }
 
 /*:host { 
@@ -78,24 +110,18 @@ align-content: flex-end;
    }
  }*/
 
-
- .mat-fab {
-     /*padding-top: 15px;
-     padding-bottom: 15px;
-     padding-left: 15px;
-     padding-right: 15px;*/
-
+.mat-fab {
     width: 50px;
     height: 50px;
     font-size: 56px;
-  }
+}
 
-  .mat-raised-button{
+.mat-raised-button{
     width: 200px;
     height: 100px;
     font-size: 20px;
-  }
+}
 
-  mat-grid-tile {
+mat-grid-tile {
     background: primary;
-  }
+}
