Clear button y cambio iconos a gris

--- a/src/app/lista-compra/lista-compra.component.html
+++ b/src/app/lista-compra/lista-compra.component.html
@@ -37,4 +37,6 @@
   </li>
 </ul>
 </div>
+<i *ngIf = "elementos.length > 0" class="material-icons" style = "color: grey;" (click)="elementos=[]">clear_all</i>
+
 <br>
