--- a/src/app/lista-compra/lista-compra.component.scss
+++ b/src/app/lista-compra/lista-compra.component.scss
@@ -37,14 +37,15 @@
 #defList{
     width:50%;
     margin : 0;
-    float : left ;
+    float : left;
     font-size: 20px;
+    color: grey;
     text-align: right;
 }
 
 #defListMob{
     margin : 0;
-    float : right ;
+    float : right;
     font-size: 15px;
     text-align: right;
     align-content: right;
@@ -70,12 +71,8 @@ li {
 }
 
 .green {
-    background-color: #2ECC40
+    background-color: #2ECC40;
     ;
-}
-
-.red {
-    background-color: red;
 }
 
 #elementButton{
@@ -102,14 +99,6 @@ li {
     align-content: flex-end;
 }
 
-/*:host { 
-    .mat-icon {
-     width: 50px;
-     height: 50px;
-     font-size: 56px;
-   }
- }*/
-
 .mat-fab {
     width: 50px;
     height: 50px;
@@ -122,6 +111,15 @@ li {
     font-size: 20px;
 }
 
+/*:host { 
+    .mat-icon {
+     width: 50px;
+     height: 50px;
+     font-size: 56px;
+   }
+}*/
+
+/*
 mat-grid-tile {
     background: primary;
-}
+}*/
